# Quant-Alpha-Pricing-Engine

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: streamlit_app.py
config/: app_config.yaml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DATA_PIPELINE.md  NUMERICAL_METHODS.md  OPERATIONS.md  RISK.md  ROADMAP.md  TESTING.md
quant_alpha/: __init__.py  enums.py  instrument.py  market_data.py  types.py
quant_alpha/analytics/: cross_greeks.py  greeks.py
quant_alpha/api/: schemas.py
quant_alpha/data/: ingress_async.py  nse_cleaning.py  observers.py
quant_alpha/pricing/: __init__.py  analytic.py  engine.py  implied_vol.py  lattice.py  simulation.py  vol_surface.py
quant_alpha/risk/: __init__.py  greeks_portfolio.py  limits.py  models.py  scenario.py  var.py
quant_alpha/utils/: logger.py  profiling.py  timeit.py
scripts/: profile_engine.py  quick_check.py  risk_report.py
tests/: test_coverage_boost.py  test_full_stack.py  test_last_percent.py  test_limits.py
